Add profile. Improve uiux
